--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "vconsole": "^3.15.1",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4",
+    "webgl-spy": "^0.0.3",
     "zustand": "5.0.3"
   },
   "devDependencies": {
@@ -117,6 +118,7 @@
     "sass": "^1.86.0",
     "sass-loader": "^16.0.5",
     "sharp": "^0.33.5",
+    "three-perf": "^1.0.10",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-react-components": "^0.1.4",
     "vite": "^6.2.2",
