--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "spritesheets": "node scripts/spritesheets.mjs; node scripts/textures spritesheets"
   },
   "dependencies": {
+    "@activetheory/split-text": "^1.1.2",
     "@funtech-inc/use-shader-fx": "^2.0.0",
     "@gltf-transform/cli": "^4.1.3",
     "@gsap/react": "^2.1.2",
