--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite --port 3333",
+    "dev": "vite",
     "build": "vite build",
     "preview": "http-server ./dist",
     "static": "http-server ./ -S -C localhost.pem -o",
