--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@react-three/rapier": "^2.0.0",
     "@types/three": "^0.174.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "@use-gesture/react": "^10.3.1",
     "@use-gesture/vanilla": "^10.3.1",
     "ahooks": "^3.8.4",
